--- a/zsurf.1
+++ b/zsurf.1
@@ -45,6 +45,8 @@ zsurf \-  browser
 
 \fBy\fP Copies current URI to primary selection.
 
+\fBe\fP Opens console to evaluate javascript.
+
 .\" --------------------------------------------------------------------
 
 .SH FILES
