Several patches but primarily fixes crash when downloading files.

--- a/zsurf.1
+++ b/zsurf.1
@@ -45,7 +45,7 @@ zsurf \-  browser
 
 \fBy\fP Copies current URI to primary selection.
 
-\fBe\fP Opens console to evaluate javascript.
+\fBe\fP Opens console to evaluate javascript and view console logs.
 
 .\" --------------------------------------------------------------------
 
