--- a/zsurf.1
+++ b/zsurf.1
@@ -27,9 +27,9 @@ zsurf \-  browser
 
 \fBh\fP Scroll horizontally to the left.
 
-\fBShift-ih\fP Zooms page in.
+\fBShift-i\fP Zooms page in.
 
-\fBShift-oh\fP Zooms page out.
+\fBShift-o\fP Zooms page out.
 
 \fB/\fP Opens the search-bar.
 
@@ -40,6 +40,8 @@ zsurf \-  browser
 \fBo\fP Opens the URL-bar.
 
 \fBr\fP Reloads the page.
+
+\fBe\fP Open script console.
 
 \fBShift-r\fP Reloads the website without using the cache.
 
